feat: created header skeleton

--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gatien Salaun</title>
+    <script src="https://kit.fontawesome.com/ba8747a913.js" crossorigin="anonymous"></script>
+    <title>Luxury Presence | Marketing Services</title>
 </head>
 <body>
-    
+    <div class="body-container">
+        <header id="header-section">
+            <nav id="nav-section">
+                <img src="assets/luxury-presence-logo.webp" alt="#" onclick="window.location.href='index.html'">
+                <input type="checkbox" id="hmb-menu" class="hmb-menu">
+                <label for="hmb-menu" class="hmb-label">
+                    <span class="bar bar1"></span>
+                    <span class="bar bar2"></span>
+                    <span class="bar bar3"></span>
+                </label>
+                <ul class="nav-ul">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Featured Properties</a></li>
+                    <li><a href="#">Past Transactions</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Home Search</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+              </nav>
+              <div class="spacer-bar"></div>
+              <h1>Marketing Services</h1>
+              <h3>​​The Benefits of Working with a Luxury Presence Agent</h3>
+          </header>
+    </div>
 </body>
 </html>
