--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/assets/luxury-logo.jpg">
     <script src="https://kit.fontawesome.com/ba8747a913.js" crossorigin="anonymous"></script>
     <title>Luxury Presence | Marketing Services</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,500&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
     <div class="body-container">
         <header id="header-section">
             <nav id="nav-section">
-                <img src="assets/luxury-presence-logo.webp" alt="#" onclick="window.location.href='index.html'">
+                <img src="assets/luxury-presence-logo.webp" alt="Luxury Presence Logo" onclick="window.location.href='index.html'">
                 <input type="checkbox" id="hmb-menu" class="hmb-menu">
                 <label for="hmb-menu" class="hmb-label">
                     <span class="bar bar1"></span>
@@ -27,9 +33,8 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
               </nav>
-              <div class="spacer-bar"></div>
-              <h1>Marketing Services</h1>
-              <h3>​​The Benefits of Working with a Luxury Presence Agent</h3>
+            <h1 id="main-h1">Marketing Services</h1>
+            <h3 id="main-text">​​The Benefits of Working with a Luxury Presence Agent</h3>
           </header>
     </div>
 </body>
