feat: animations + background

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
               </nav>
-            <h1 id="main-h1">Marketing Services</h1>
-            <h3 id="main-text">​​The Benefits of Working with a Luxury Presence Agent</h3>
+              <section id="mainHeaderSection">
+                <h1 id="main-h1">Marketing Services</h1>
+                <h3 id="main-text">​​The Benefits of Working with a Luxury Presence Agent</h3>
+              </section>
           </header>
     </div>
 </body>
