feat: hamburger menu created

--- a/index.html
+++ b/index.html
@@ -17,14 +17,34 @@
     <div class="body-container">
         <header id="header-section">
             <nav id="nav-section">
-                <img src="assets/luxury-presence-logo.webp" alt="Luxury Presence Logo" onclick="window.location.href='index.html'">
                 <input type="checkbox" id="hmb-menu" class="hmb-menu">
                 <label for="hmb-menu" class="hmb-label">
                     <span class="bar bar1"></span>
                     <span class="bar bar2"></span>
                     <span class="bar bar3"></span>
                 </label>
-                <ul class="nav-ul">
+                <div id="side-nav-container">
+                    <input type="checkbox" id="hmb-menu" class="hmb-menu">
+                    <label for="hmb-menu" class="hmb-label">
+                        <span class="bar bar1"></span>
+                        <span class="bar bar2"></span>
+                        <span class="bar bar3"></span>
+                    </label>
+                    <ul id="side-nav">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Testimonials</a></li>
+                        <li><a href="#">Home Search</a></li>
+                        <li><a href="#">Neighborhoods</a></li>
+                        <li><a href="#">Client Resources</a></li>
+                        <li><a href="#">Press & Media</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">My Search Portal</a></li>
+                    </ul>
+                </div>
+                <ul id="main-nav" class="nav-ul">
                     <li><a href="#">About</a></li>
                     <li><a href="#">Featured Properties</a></li>
                     <li><a href="#">Past Transactions</a></li>
@@ -32,6 +52,7 @@
                     <li><a href="#">Home Search</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
+                <img src="assets/luxury-presence-logo.webp" alt="Luxury Presence Logo" onclick="window.location.href='index.html'">
               </nav>
               <section id="mainHeaderSection">
                 <h1 id="main-h1">Marketing Services</h1>
