--- a/index.html
+++ b/index.html
@@ -24,12 +24,7 @@
                     <span class="bar bar3"></span>
                 </label>
                 <div id="side-nav-container">
-                    <input type="checkbox" id="hmb-menu" class="hmb-menu">
-                    <label for="hmb-menu" class="hmb-label">
-                        <span class="bar bar1"></span>
-                        <span class="bar bar2"></span>
-                        <span class="bar bar3"></span>
-                    </label>
+                    <!-- <span class="top-bar"></span> -->
                     <ul id="side-nav">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
@@ -40,9 +35,11 @@
                         <li><a href="#">Client Resources</a></li>
                         <li><a href="#">Press & Media</a></li>
                         <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact Us</a></li>
                         <li><a href="#">My Search Portal</a></li>
                     </ul>
+                    <div class="contact-container">
+                        <p class="contact-text">Contact Us</p>
+                    </div>
                 </div>
                 <ul id="main-nav" class="nav-ul">
                     <li><a href="#">About</a></li>
@@ -59,6 +56,12 @@
                 <h3 id="main-text">​​The Benefits of Working with a Luxury Presence Agent</h3>
               </section>
           </header>
+          <section id="learn-section">
+              <div id="learn-container">
+                  <h3 id="main-h3">Want to learn more about?</h3>
+                  <button type="button" id="contact-btn">Contact Us</button>
+              </div>
+          </section>
     </div>
 </body>
 </html>
