feat: info section created

--- a/index.html
+++ b/index.html
@@ -62,6 +62,19 @@
                   <button type="button" id="contact-btn">Contact Us</button>
               </div>
           </section>
+          <section id="info-section">
+            <div id="info-container">
+                <h2 id="info-h2">Why you should hire an agent who has partnered with a luxury real estate
+                    marketing company.</h2>
+                <p id="info-p">One of the biggest perks of working with a real estate agent is their ability
+                    to market your property to the right target audience. A professional agent with
+                    the right experience will be able to identify who will be interested in your
+                    property and implement effective strategies to reach them via their website,
+                    paid advertising, social media, and other means. When you work with an agent who
+                    has partnered with Luxury Presence, you benefit from the many different types of
+                    marketing capabilities the company offers. Here is how:</p>
+            </div>
+          </section>
     </div>
 </body>
 </html>
