feat: main section created

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <li><a href="#">Home Search</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
-                <img src="assets/luxury-presence-logo.webp" alt="Luxury Presence Logo" onclick="window.location.href='index.html'">
+                <img src="assets/lp-black.png" alt="Luxury Presence Logo" onclick="window.location.href='index.html'">
               </nav>
               <section id="mainHeaderSection">
                 <h1 id="main-h1">Marketing Services</h1>
@@ -74,6 +74,73 @@
                     has partnered with Luxury Presence, you benefit from the many different types of
                     marketing capabilities the company offers. Here is how:</p>
             </div>
+          </section>
+          <section id="benefits-section">
+              <div id="benefits-container">
+                  <div id="benefit-container">
+                      <img class="global-img" src="/assets/jean-philippe-delberghe-vHW4-ld9nNg-unsplash.jpg" alt="">
+                      <h3 class="global-h3">Paid Advertising on All Channels</h3>
+                      <p class="global-p">To reach your potential buyers, you have to know who they are, where they
+                        spend their time online, and how they make their buying decisions. Agents who
+                        use luxury real estate marketing services are able to identify your niche
+                        market, then create paid ads on Facebook, Google, Instagram, and YouTube that
+                        reach those interested in your property. These paid ad campaigns are highly
+                        customized and targeted, ensuring you are not spending money marketing to those
+                        who are not in the market for a property such as yours.</p>                  
+                    </div>
+                  <div id="benefit-container">
+                      <h3 class="global-h3">Expert Content Production</h3>
+                      <p class="global-p">Content is one of the most powerful resources a real estate agent has to
+                          promote your property. Being able to create high-quality content such as video
+                          and copywriting is an essential tool that elevates the agents who use luxury
+                          real estate marketing services above their competitors. According to a recent
+                          survey, 85 percent of buyers and sellers want to work with an agent who uses
+                          video—and for good reason. An agent who uses video is able to connect with
+                          potential buyers on a deeper level and build trust and rapport. When they use
+                          video to market your property, they are showing viewers what it would really be
+                          like to walk through and live in your home—something that is much more difficult
+                          to do with a written description. However, written descriptions—or
+                          copywriting—is also important. Your property needs to be described in appealing
+                          and vibrant terms on the listing and on any additional marketing that is created
+                          to sell it. Those agents who work with Luxury Presence get access to experienced
+                          real estate copywriters who create blogs, website copy, and content marketing
+                          pieces that make your property attractive to potential buyers.
+                        </p>
+                        <img class="global-img" src="/assets/mateo-fernandez-XTC538P_eWk-unsplash.jpg" alt="">
+                  </div>
+                  <div id="benefit-container">
+                      <img class="global-img" src="/assets/mark-s-D3cC-j2-pP4-unsplash.jpg" alt="">
+                      <h3 class="global-h3">Effective Search Engine Optimization</h3>
+                      <p class="global-p">Recent research has shown that 44% of buyers found the home they
+                        purchased on the internet. Many of them simply googled the search terms that
+                        they wanted in a new home and started their search that way. For your home to
+                        show up in these types of searches, your real estate agent needs to use the
+                        right terms in your online marketing. The effective use of these terms is
+                        referred to as search engine optimization or SEO. The process of identifying and
+                        correctly using the right terms is a bit of a science—one that the SEO experts
+                        at Luxury Presence have mastered. When a potential buyer searches terms that
+                        match your home, your property will show up in the results and provide
+                        opportunities for the buyer to learn more
+                    </p>                  
+                  </div>
+                  <div id="benefit-container">
+                      <h3 class="global-h3">Social Media Marketing</h3>
+                      <p class="global-p">
+                          If your real estate agent is an influencer on social media, he or she has access
+                            to thousands of niche buyers who are ready to invest in property. To be an
+                            influencer, an agent either needs to dedicate a large chunk of their time to
+                            social media or they need to partner with luxury real estate marketing service
+                            providers who can put in the work for them. Wouldn’t you rather your agent spent
+                            his or her time marketing your property and let an expert handle their social
+                            media presence? At Luxury Presence, our dedicated success team utilizes an
+                            agent’s stories and feed posts to help them go viral and become an authority in
+                            their industry. Once they’ve harnessed the power of becoming an influencer, they
+                            can use their voice to advocate for your home and sell it more quickly than
+                            their competitors.
+                        </p>
+                        <img class="global-img" src="/assets/joseph-ngabo-LZr7ZcMVDs4-unsplash.jpg" alt="">
+                  </div>
+              </div>
           </section>
     </div>
 </body>
