finished main content

--- a/index.html
+++ b/index.html
@@ -142,6 +142,14 @@
                   </div>
               </div>
           </section>
+          <section id="us-section">
+            <div id="us-container">
+                <h3 id="us-h3">Work With Us</h3>
+                <p id="us-p">Our expansive network and white-glove service ensure a bespoke experience for
+                    both buyers and sellers across multiple markets.
+                </p>            
+            </div>
+        </section>    
     </div>
 </body>
 </html>
