--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,500&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="/styles/normalize.css">
     <link rel="stylesheet" href="/styles/main.css">
+    <script src="https://kit.fontawesome.com/f784d185d6.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="body-container">
@@ -24,7 +25,6 @@
                     <span class="bar bar3"></span>
                 </label>
                 <div id="side-nav-container">
-                    <!-- <span class="top-bar"></span> -->
                     <ul id="side-nav">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
@@ -149,7 +149,46 @@
                     both buyers and sellers across multiple markets.
                 </p>            
             </div>
-        </section>    
+        </section>
+        <footer id="footer-section">
+            <div id="footer-container">
+                <h3>Luxury Presence Team</h3>
+                <div id="contactInfo-container">
+                    <div class="dataContainer">
+                        <p>Agent 1</p>
+                        <i class="fa-solid fa-circle-envelope"></i>
+                        <p>contact@luxurypresence.com</p>
+                    </div>
+                    <div class="dataContainer">
+                        <p>Agent 2</p>
+                        <i class="fa-solid fa-circle-envelope"></i>
+                        <p>hello@luxurypresence.com</p>
+                    </div>
+                    <div class="dataContainer">
+                        <p>Adress</p>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <p>1808 Stanford St, 
+                        Santa Monica, CA 90404</p>
+                    </div>
+                    <div class="dataContainer">
+                        <p>Phone Number</p>
+                        <i class="fa-solid fa-circle-phone"></i>
+                        <p>310-555-5555</p>
+                    </div>
+                    <div class="dataContainer">
+                        <p>Phone Number</p>
+                        <i class="fa-solid fa-circle-phone"></i>
+                        <p>310-555-4444</p>
+                    </div>
+                    <div class="dataContainer">
+                        <p>Open Hours</p>
+                        <i class="fa-solid fa-clock"></i>
+                        <p>Mon - Fri, 9 AM - 5 PM</p>  
+                    </div>  
+                </div>
+                <div id="data-container"></div>
+            </div>
+        </footer>    
     </div>
 </body>
 </html>
