finished & bug fix

--- a/index.html
+++ b/index.html
@@ -152,41 +152,46 @@
         </section>
         <footer id="footer-section">
             <div id="footer-container">
-                <h3>Luxury Presence Team</h3>
+                <h3 class="footer-h3">Luxury Presence Team</h3>
                 <div id="contactInfo-container">
                     <div class="dataContainer">
-                        <p>Agent 1</p>
-                        <i class="fa-solid fa-circle-envelope"></i>
-                        <p>contact@luxurypresence.com</p>
+                        <p class="footer-p footer-title">Agent 1</p>
+                        <p class="footer-p">contact@luxurypresence.com</p>
                     </div>
                     <div class="dataContainer">
-                        <p>Agent 2</p>
-                        <i class="fa-solid fa-circle-envelope"></i>
-                        <p>hello@luxurypresence.com</p>
+                        <p class="footer-p footer-title">Phone Number</p>
+                        <p class="footer-p">310-555-5555</p>
                     </div>
                     <div class="dataContainer">
-                        <p>Adress</p>
-                        <i class="fa-solid fa-location-dot"></i>
-                        <p>1808 Stanford St, 
+                        <p class="footer-p footer-title">Agent 2</p>
+                        <p class="footer-p">hello@luxurypresence.com</p>
+                    </div>
+                    <div class="dataContainer">
+                        <p class="footer-p footer-title">Phone Number</p>
+                        <p class="footer-p">310-555-4444</p>
+                    </div>
+                    <div class="dataContainer">
+                        <p class="footer-p footer-title">Adress</p>
+                        <p class="footer-p">1808 Stanford St, 
                         Santa Monica, CA 90404</p>
                     </div>
                     <div class="dataContainer">
-                        <p>Phone Number</p>
-                        <i class="fa-solid fa-circle-phone"></i>
-                        <p>310-555-5555</p>
-                    </div>
-                    <div class="dataContainer">
-                        <p>Phone Number</p>
-                        <i class="fa-solid fa-circle-phone"></i>
-                        <p>310-555-4444</p>
-                    </div>
-                    <div class="dataContainer">
-                        <p>Open Hours</p>
-                        <i class="fa-solid fa-clock"></i>
-                        <p>Mon - Fri, 9 AM - 5 PM</p>  
+                        <p class="footer-p footer-title">Open Hours</p>
+                        <p class="footer-p">Mon - Fri, 9 AM - 5 PM</p>  
                     </div>  
                 </div>
-                <div id="data-container"></div>
+                <span id="footer-spacer"></span>
+                <div id="data-container">
+                    <p class="footer-p">Copyright © 2022 | Privacy Policy</p>
+                    <p class="footer-p">Powered by <span id="luxury-span">Luxury Presence</span></p>
+                    <ul class="footer-ul">
+                        <li><i class="fa-brands fa-facebook"></i></li>
+                        <li><i class="fa-brands fa-instagram"></i></li>
+                        <li><i class="fa-brands fa-linkedin-in"></i></li>
+                        <li><i class="fa-brands fa-twitter"></i></li>
+                        <li><i class="fa-brands fa-youtube"></i></li>
+                    </ul>
+                </div>
             </div>
         </footer>    
     </div>
